@@ -3,6 +3,7 @@ Revision history for perl module File::Versions
 0.05 2013-11-30
 
 * Add "Changes"
+* Add repository information
 
 0.04 2013-02-27
 
